--- a/styles/contact.css
+++ b/styles/contact.css
@@ -7,8 +7,13 @@ body {
 
 .contact {
   box-shadow: 10px 10px 10px 10px black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  -webkit-justify-content:center;
   justify-content: center;
+  -webkit-align-items: center;
   align-items: center;
   width:1140px;
   max-width: 100%;
@@ -25,6 +30,7 @@ body {
 
 .left {
   border-right: 2px solid;
+  -webkit-flex-grow: 1;
   flex-grow: 1;
   position: relative;
 }
@@ -45,6 +51,9 @@ body {
 }
 
 .leftTop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   flex-direction:column;
   position: relative;
@@ -77,6 +86,7 @@ h3::after {
 }
 
 .right {
+  -webkit-flex-grow: 2;
   flex-grow: 2;
 }
 
@@ -158,10 +168,12 @@ label {
   }
 
   .left {
+    -webkit-order:2;
     order:2;
   }
 
   .right {
+    -webkit-order:1;
     order:1;
   }
 
@@ -183,6 +195,7 @@ label {
     font-size: 14px;
   }
   .contact {
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
   }
 
