--- a/styles/contact.css
+++ b/styles/contact.css
@@ -141,7 +141,7 @@ label {
     position: absolute;
     top: 0px;
     right: -9%;
-    background-image: url(../images/ribon.png);
+    background-image: url(../images/ribbon.png);
     background-size: 10px 20px;
     width: 60px;
     max-width: 100%;
@@ -182,7 +182,7 @@ label {
     position: absolute;
     top: 0px;
     right: -9%;
-    background-image: url(../images/ribon.png);
+    background-image: url(../images/ribbon.png);
     background-size: 10px 20px;
     width: 35px;
     max-width: 100%;
